--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,25 @@ kafka-data/
 .DS_Store
 Thumbs.db
 
+# 忽略所有 tfvars 檔案
+*.tfvars
+
+# 忽略 Terraform 的暫存檔
+.terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+
+# 忽略所有 .env 檔案
+.env
+
+# 忽略所有 key 檔案
+*.key
+*.pem
+*.pub
+*.crt
+*.cer
+*.p12
+*.pfx
+*.p12
+*.pfx
