update deploy aws script and main.tf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       KAFKA_CLUSTER_ID: "cmznRTErR6upN6WkHSP25Q"
       CLUSTER_ID: "cmznRTErR6upN6WkHSP25Q"
       KAFKA_LISTENERS: "INTERNAL://broker:29092,EXTERNAL://0.0.0.0:9092,CONTROLLER://broker:29093"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://broker:29092,EXTERNAL://localhost:9092"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://broker:29092,EXTERNAL://${EC2_PUBLIC_IP}:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT"
       KAFKA_CONTROLLER_QUORUM_VOTERS: "1@broker:29093"
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
